# Minimalistic-Drawing-Tool

./: README.md  minimalistics_drawing_tool.py  pyproject.toml
minimalistic_drawing_tool/: __init__.py  drawing_tool.py
minimalistic_drawing_tool.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
